toolchain/internal/core/analysis/testdata/errors/duplicates/duplicate_pattern.vdl
// @expect: E804

pattern UserEvent = "users.{id}"
pattern UserEvent = "events.{id}"
